Fix checkout content alignment

--- a/client/my-sites/checkout/checkout-thank-you/domains/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/domains/style.scss
@@ -1,7 +1,8 @@
 @import '@automattic/typography/styles/variables';
 
 .is-section-checkout-thank-you .layout__content {
-    padding: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .checkout-thank-you__domains {
